# finance-earnings-nlp-analysis

./: .gitignore  README.md  ai.json  fin_nlp.json  pyproject.toml  requirements.txt
data/: Alphabet-2026_Q1_Earnings_Transcript.txt  Alphabet-2026_Q1_Earnings_Transcript_.txt
docs/: architecture.md
examples/: run_sample.py
rag_data/: rag_1.txt
src/: ai.json  ai_enabled_nlp_fin_investor_transcript_reader.py  fin_nlp.json  query.json
src/finance_earnings_nlp_analysis/: __init__.py  analyzer.py  cli.py  config.py  export_utils.py  io_utils.py  metrics.py  report_builder.py  text_processing.py
src/finance_earnings_nlp_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/output/: analysis_manifest.csv  comparative_analysis.csv  cooccurrence_analysis.csv  entity_analysis.csv  finance-earnings-nlp-analysis.html  key_quote_analysis.csv  kpi_extraction.csv  phrase_analysis.csv  risk_opportunity_analysis.csv  section_analysis.csv  semantic_search_index.csv  sentiment_analysis.csv  term_frequency.csv  theme_analysis.csv  topic_model_analysis.csv  uncertainty_analysis.csv
templates/: report_template.html
tests/: test_smoke.py
